/*
* This code has been generated by the Rebel: a code generator for modern Java.
*
* Drop us a line or two at feedback@archetypesoftware.com: we would love to hear from you!
*/
package root.data;

import java.util.*;


import root.data.DAO.IdType;
import root.data.DAO.Model;
// ----------- << imports@AAAAAAGEq0cXHNRwSs0= >>
// ----------- >>

// ----------- << class.annotations@AAAAAAGEq0cXHNRwSs0= >>
// ----------- >>
public class AdminDAO extends DAO {
    /**
    * @param model
    */

    @Override
    // ----------- << method.annotations@AAAAAAGEqwsK/vvtcX0= >>
    // ----------- >>
    public boolean insert(Model model) {
    // ----------- << method.body@AAAAAAGEqwsK/vvtcX0= >>
    // ----------- >>
    }
    /**
    * @param id
    */

    @Override
    // ----------- << method.annotations@AAAAAAGEqxPR7/3rnfY= >>
    // ----------- >>
    public Model get(IdType id) {
    // ----------- << method.body@AAAAAAGEqxPR7/3rnfY= >>
    // ----------- >>
    }
    @Override
    // ----------- << method.annotations@AAAAAAGEqwsRWPv5vW8= >>
    // ----------- >>
    public ArrayList<Model> getAll() {
    // ----------- << method.body@AAAAAAGEqwsRWPv5vW8= >>
    // ----------- >>
    }
    /**
    * @param model
    */

    @Override
    // ----------- << method.annotations@AAAAAAGEqwsStvv//Eo= >>
    // ----------- >>
    public boolean update(Model model) {
    // ----------- << method.body@AAAAAAGEqwsStvv//Eo= >>
    // ----------- >>
    }
    /**
    * @param model
    */

    @Override
    // ----------- << method.annotations@AAAAAAGEqw1CdPwvL+Y= >>
    // ----------- >>
    public boolean delete(Model model) {
    // ----------- << method.body@AAAAAAGEqw1CdPwvL+Y= >>
    // ----------- >>
    }
// ----------- << class.extras@AAAAAAGEq0cXHNRwSs0= >>
// ----------- >>
}