/*
* This code has been generated by the Rebel: a code generator for modern Java.
*
* Drop us a line or two at feedback@archetypesoftware.com: we would love to hear from you!
*/

package root.data;

import java.sql.Connection;
import java.util.ArrayList;

// ----------- << imports@AAAAAAGEqwY/BPplz+E= >>
// ----------- >>

// ----------- << class.annotations@AAAAAAGEqwY/BPplz+E= >>
// ----------- >>
public class AdresseDao<Model, IdType> extends Dao {
    /**
     * @param connexion
     */
    public AdresseDao(Connection connexion) {
        super(connexion);
    }

    /**
     * @param o
     */
    @Override
    public boolean insert(Object o) {
        return false;
    }

    /**
     * @param id
     */
    @Override
    public Object get(Object id) {
        return null;
    }

    @Override
    // ----------- << method.annotations@AAAAAAGEqwsRWPv5vW8= >>
    // ----------- >>
    public ArrayList<Model> getAll() {
    // ----------- << method.body@AAAAAAGEqwsRWPv5vW8= >>
    // ----------- >>
        return null;
    }

    /**
     * @param o
     */
    @Override
    public boolean delete(Object o) {
        return false;
    }

    /**
     * @param o
     * @return
     */
    @Override
    public boolean update(Object o) {
        return false;
    }

// ----------- << class.extras@AAAAAAGEqwY/BPplz+E= >>
// ----------- >>
}