/*
* This code has been generated by the Rebel: a code generator for modern Java.
*
* Drop us a line or two at feedback@archetypesoftware.com: we would love to hear from you!
*/
package root.data;

import java.util.*;
import java.sql.Connection;
// ----------- << imports@AAAAAAGEqwZ+6/rjqj0= >>
// ----------- >>

// ----------- << class.annotations@AAAAAAGEqwZ+6/rjqj0= >>
// ----------- >>
public class ProducteurDao<Model, IdType> extends Dao {
    /**
     * @param connexion
     */
    public ProducteurDao(Connection connexion) {
        super(connexion);
    }

    /**
     * @param o
     */
    @Override
    public boolean insert(Object o) {
        return false;
    }

    /**
     * @param id
     */
    @Override
    public Object get(Object id) {
        return null;
    }

    /**
     * @return
     */
    @Override
    public ArrayList getAll() {
        return null;
    }

    /**
     * @param o
     */
    @Override
    public boolean update(Object o) {
        return false;
    }

    /**
     * @param o
     */
    @Override
    public boolean delete(Object o) {
        return false;
    }

}